// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: Button Basic Usage 1`] = `
Object {
  "docs": "A Dracula UI button behaves like regular HTML buttons and accepts the same contents and properties.",
  "html": "<button class=\\"drac-btn drac-bg-purple\\">Dracula</button>
",
  "react": "<Button color=\\"purple\\">Dracula</Button>;
",
  "title": "Usage",
}
`;

exports[`Site: Button Colors 1`] = `
Object {
  "docs": "Buttons can be customized to use any of the Dracula UI theme colors, including all solid, gradient, and animated colors.",
  "html": "<div>
  <button class=\\"drac-btn drac-bg-purple drac-m-sm\\">Purple</button
  ><button class=\\"drac-btn drac-bg-purple-cyan drac-m-sm\\">Purple Cyan</button>
</div>
",
  "react": "<div>
  <Button color=\\"purple\\" m=\\"sm\\">
    Purple
  </Button>
  <Button color=\\"purpleCyan\\" m=\\"sm\\">
    Purple Cyan
  </Button>
</div>;
",
  "title": "Colors",
}
`;

exports[`Site: Button Disabled 1`] = `
Object {
  "docs": "A disabled button can't used, clicked, or even submitted with a form.",
  "html": "<div class=\\"drac-box\\">
  <button class=\\"drac-btn drac-bg-purple drac-m-sm\\" disabled=\\"\\">Normal</button
  ><button
    class=\\"drac-btn drac-bg-purple-transparent drac-btn-ghost drac-text-purple drac-m-sm\\"
    disabled=\\"\\"
  >
    Ghost</button
  ><button
    class=\\"drac-btn drac-bg-purple drac-btn-outline drac-text-purple drac-m-sm\\"
    disabled=\\"\\"
  >
    Outline
  </button>
</div>
",
  "react": "<Box>
  <Button disabled={true} color=\\"purple\\" m=\\"sm\\">
    Normal
  </Button>
  <Button disabled={true} variant=\\"ghost\\" color=\\"purple\\" m=\\"sm\\">
    Ghost
  </Button>
  <Button disabled={true} variant=\\"outline\\" color=\\"purple\\" m=\\"sm\\">
    Outline
  </Button>
</Box>;
",
  "title": "Disabled",
}
`;

exports[`Site: Button Sizes 1`] = `
Object {
  "docs": "Button sizes range from \`xs\` to \`lg\` using the Dracula UI size scale.",
  "html": "<div class=\\"drac-box\\">
  <button class=\\"drac-btn drac-bg-purple drac-btn-xs drac-m-sm\\">xs</button
  ><button class=\\"drac-btn drac-bg-purple drac-btn-sm drac-m-sm\\">sm</button
  ><button class=\\"drac-btn drac-bg-purple drac-m-sm\\">md</button
  ><button class=\\"drac-btn drac-bg-purple drac-btn-lg drac-m-sm\\">lg</button>
</div>
",
  "react": "<Box>
  <Button color=\\"purple\\" size=\\"xs\\" m=\\"sm\\">
    xs
  </Button>
  <Button color=\\"purple\\" size=\\"sm\\" m=\\"sm\\">
    sm
  </Button>
  <Button color=\\"purple\\" size=\\"md\\" m=\\"sm\\">
    md
  </Button>
  <Button color=\\"purple\\" size=\\"lg\\" m=\\"sm\\">
    lg
  </Button>
</Box>;
",
  "title": "Sizes",
}
`;

exports[`Site: Button Tags 1`] = `
Object {
  "docs": "By default, every Button is specified with the \`<button>\` tag, but you can change that to better match your semantic needs.",
  "html": "<div class=\\"drac-box\\">
  <button class=\\"drac-btn drac-bg-green drac-m-sm\\">Button</button
  ><a class=\\"drac-btn drac-bg-green drac-m-sm\\" href=\\"#\\">Anchor</a>
</div>
",
  "react": "<Box>
  <Button as=\\"button\\" m=\\"sm\\">
    Button
  </Button>
  <Button as=\\"a\\" href=\\"#\\" m=\\"sm\\">
    Anchor
  </Button>
</Box>;
",
  "title": "Tags",
}
`;

exports[`Site: Button Variants 1`] = `
Object {
  "docs": "Dracula UI ships with three distinct button variations that allow for different levels of hierarchy and usage.",
  "html": "<div class=\\"drac-box\\">
  <button class=\\"drac-btn drac-bg-purple drac-m-sm\\">Normal</button
  ><button
    class=\\"drac-btn drac-bg-purple-transparent drac-btn-ghost drac-text-purple drac-m-sm\\"
  >
    Ghost</button
  ><button
    class=\\"drac-btn drac-bg-purple drac-btn-outline drac-text-purple drac-m-sm\\"
  >
    Outline
  </button>
</div>
",
  "react": "<Box>
  <Button color=\\"purple\\" m=\\"sm\\">
    Normal
  </Button>
  <Button variant=\\"ghost\\" color=\\"purple\\" m=\\"sm\\">
    Ghost
  </Button>
  <Button variant=\\"outline\\" color=\\"purple\\" m=\\"sm\\">
    Outline
  </Button>
</Box>;
",
  "title": "Variants",
}
`;
